# 3DAstrophysics

./: .gitignore  8kVertPlanet.mtl  CMakeLists.txt  control.cpp  loadDDS.cpp  loadDDS.hpp  loadOBJ.cpp  loadOBJ.hpp  loadShader.cpp  main.cpp  tut2.cpp  tutorialCode.cpp
Common/: commands.cpp  commands.hpp  control.cpp  control.hpp  loadDDS.cpp  loadOBJ.cpp  loadOBJ.hpp  main.cpp  structs.hpp
Graphics/: FragmentShader.glsl  VertexShader.glsl  commands.cpp  commands.hpp  main.cpp
Physics/: Cell.cpp  Cell.hpp  Particle.cpp  Particle.hpp  StellarBody.cpp  StellarBody.hpp
